<resources>
    <string name="app_name">M1project</string>
    <string name="passwords">passwords</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="sign">sign</string>
    <string name="city">city</string>
    <string name="sign_up">sign up</string>
    <string-array name="transport_types">
        <item>Choose transport type</item>
        <item>Car</item>
        <item>Motorcycle</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>